<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="401dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:background="@color/blueGreen"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:paddingLeft="22dp"
        app:layout_constraintBottom_toTopOf="@+id/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:hint="@string/firstName"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ -'"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/lastName"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ -'"
        app:layout_constraintBottom_toTopOf="@+id/birthdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.488"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/birthdate"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/blueGreen"
        android:text="@string/birthdate"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/nbCats"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:layout_marginTop="72dp"
        android:inputType="number"
        android:autofillHints=""
        android:hint="@string/nbCats"
        app:layout_constraintEnd_toStartOf="@+id/nbDogs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdate"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/nbDogs"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:hint="@string/nbDogs"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/nbCats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nbCats"
        app:layout_constraintTop_toBottomOf="@+id/birthdate"
        app:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/blueGreen"
        android:text="@string/submit"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nbCats"/>

    <Button
        android:id="@+id/clear"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/blueGreen"
        android:text="@string/clear"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>
